resources/nginx/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 80
    - name: https
      port: 443
      targetPort: 443
      nodePort: 443
  selector:
    app: nginx
  type: NodePort
